# shadow-cli

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
plans/: plan_v1.md  plan_v2.md
shadow/: bedrock.py  cli.py  config.py  conversation.py  gateway.py  tools.py
